# Art_Studio_BE

./: .env.example  .gitignore  README.md  RENDER_ENV_VARS.md  pyproject.toml  render.yaml  requirements.txt
api/: admin.py  apps.py  choices.py  models.py  serializers.py  signals.py  urls.py  views.py
api/management/commands/: cleanup_passed_reservations.py  loaddirections.py  seed.py  seed_slugs.py
api/migrations/: 0001_initial.py  0002_direction_slug_location_slug.py  0003_reservation_unique_active_user_location_day_time.py
config/: settings.py  urls.py
templates/email/: verify_email_cs.html  verify_email_en.html  verify_email_en.txt  verify_email_ru.html  verify_email_ru.txt
